--- a/introduction.tex
+++ b/introduction.tex
@@ -1,5 +1,21 @@
 \chapter{Introduction}
 
-\section{Buss' Flow Graphs}
+\begin{itemize}
 
-\section{Proof Nets}
+%----
+\item
+In traditional proof theory, a proof is on normal form if it does not contain the cut rule. Normalisation is therefore the same as cut elimination.
+%----
+\item
+In deep inference we have a more liberal notion of what a proof is. In particular, we have proofs from which the cut rule can not be eliminated.
+%----
+\item
+In this thesis we present a generalisation of normal forms of proofs. In particular we hold the view that:
+%----
+\item
+A proof is a geometric object and a proof on normal form is a proof with a certain geometric property.
+%----
+\item
+%----
+\item
+\end{itemize}
