--- a/global_transformations/multiple_isolated_subflow.tex
+++ b/global_transformations/multiple_isolated_subflow.tex
@@ -129,6 +129,16 @@ where $l_i$ is the number of atom occurrences in $\gamma_{k,i}$, we define the r
 such that, for every upper (resp., lower) edge $\epsilon'$ (resp., $\iota'$) of the contractum, there is an $\epsilon$ in $\boldsymbol\epsilon$ (reps., $\iota$ in $\boldsymbol\iota$), such that there are paths from $\epsilon'$ (resp., from $\iota'$) to $f_0(\epsilon)$, $\dots$, $f_{n+1}(\epsilon)$ (resp., to $f_0(\iota)$, $\dots$, $f_{n+1}(\iota)$).
 \end{definition}
 
+%------------------------------------------------------
+\begin{remark}\label{remark:FromGammasToThresholds}
+Given the atoms $a_1$, $\dots$, $a_n$ and, for every $0\le k\le N$, the formulae $\gamma_{k,1}$, $\dots$, $\gamma_{k,n}$, with the properties described in Definition~\vref{definition:MultipleIsolatedSubflowsRemoval}. It follows from an argument by induction on $k$ that, for every $1\le i\le n$ and every $0\le k\le N$, the formula $\gamma_{k,i}$
+\begin{itemize}
+ \item is true if at least $k$ of the atoms $a_1$, $\dots$, $a_{i-1}$, $a_{i+1}$, $\dots$, $a_n$ are true; and
+ \item is false if at least $N-k$ of the atoms $a_1$, $\dots$, $a_{i-1}$, $a_{i+1}$, $\dots$, $a_n$ are false.
+\end{itemize}
+It follows by contradiction that $N\ge n$. Furthermore, if $N=n$, we know that $\gamma_{k,i}$ is true if and only if at least $k$ of the atoms $a_1$, $\dots$, $a_{i-1}$, $a_{i+1}$, $\dots$, $a_n$ are true. This would make $\gamma_{k,i}$ a \emph{threshold formula}, as we will se in Section~\vref{subsubsection:ThresholdFormulae}.
+\end{remark}
+
 \TODO{This reduction differs from the other ones, since the atomic flows in the contractum are not yet defined.}
 
 \TODO{Redo this theorem:}
@@ -1092,292 +1102,3 @@ $\to_\frqmis$ is sound.
 \begin{theorem}\label{theorem:SizeQuasipolynomialMultipleSubflowRemoval}
 $\to_\frqmis$ is quasipolynomial.
 \end{theorem}
-
-\TODO{Add a few words to the effect: `We have now seen that threshold formulae do the job, but do we HAVE to use threshold formulae?'}
-
-%------------------------------------------------------
-\begin{theorem}\label{theorem:AlternativeToThresholdDerivations}
-Given atoms $a_1$, $\dots$, $a_n$ and, for every $0\le k\le n$, formulae $\gamma_{k,1}$, $\dots$, $\gamma_{k,n}$, such that
-\[
-\gamma_{0,1}=\cdots=\gamma_{0,n}=\ttt
-\quad\mbox{and}\quad
-\gamma_{l,1}=\cdots=\gamma_{l,n}=\fff
-\quad,
-\]
-for some $l>0$, and such that, for every $1\le k\le l$, there exists a derivation
-\[
-\vlder{}{\SKS\setminus\{\aid,\aiu\}}
-{
- \vls([a_1.\gamma_{k,1}].\cdots.[a_n.\gamma_{k,n}])
-}
-{
- \vls[(a_1.\gamma_{k-1,1}).\cdots.(a_n.\gamma_{k-1,n})]
-}\quad.
-\]
-Then, for every $1\le i\le n$ and every $0\le k\le l$, the formula $\gamma_{k,i}$
-\begin{itemize}
- \item is true if at least $k$ of the atoms $a_1$, $\dots$, $a_{i-1}$, $a_{i+1}$, $\dots$, $a_n$ are true, and
- \item is false if at least $l-k$ of the atoms $a_1$, $\dots$, $a_{i-1}$, $a_{i+1}$, $\dots$, $a_n$ are false.
-\end{itemize}
-\end{theorem}
-
-%------------------------------------------------------
-\begin{proof}
-Let $\theta_k\equiv\theta_k^n\avec 1n$, be the threshold formulae defined in Definition~\vref{definition:ThresholdFormulae}.
-
-We first observe that, for every $0\le k\le n$ and for every $1\le i\le n$
-\begin{itemize}
- \item $\theta_k\{a_i/\fff\}$ is true if at least $k$ of the atoms $a_1$, $\dots$, $a_{i-1}$, $a_{i+1}$, $\dots$, $a_n$ are true, and
- \item $\theta_{n-l+k+1}\{a_i/\ttt\}$ is false if at least $l-k$ of the atoms $a_1$, $\dots$, $a_{i-1}$, $a_{i+1}$, $\dots$, $a_n$ are false.
-\end{itemize}
-Hence, we can prove the claim by showing that derivations $\Phi_{k,i}$ and $\Psi_{k,i}$ exist such that:
-\[
-\vlderivation
-{
- \vlde{\Psi_{k,i}}{}
- {
-  \theta_{n-l+k+1}\{a_i/\ttt\}
- }
- {
-  \vlde{\Phi_{k,i}}{}
-  {
-   \gamma_{k,i}
-  }
-  {
-   \vlhy
-   {
-    \theta_{k,i}\{a_i/\fff\}
-   }
-  }
- }
-}\quad.
-\]
-
-%---
-We prove by induction on $k$ how to build $\Phi_{k,i}$. The base case is trivial:
-\[
- \vlinf{=}{}
- {
-  \gamma_{0,i}
- }
- {
-  \theta_0\{a_i/\fff\}
- }\quad.
-\]
-We prove the inductive case by fixing a $k>0$. We need the following derivation:
-\[
-\vlder{}{\SKS\setminus\{\aid,\aiu\}}
-{
-\vls[(a_1.\theta_k\{a_1/\fff\}).\cdots.(a_n.\theta_k\{a_n/\fff\})]
-}
-{
- \theta_{k+1}
-}\quad.
-\]
-We know such a derivation exists in system $\SKS$ since the premiss and conclusion are logically equivalent. Furthermore, since the premiss and conclusion do not contain any pair of dual atom occurrences we know that a derivation exists in the system $\SKS\setminus\{\aid,\aiu\}$, by Proposition~\vref{TODO}. We assume the following derivations exist
-\[
-\vlder{\Phi_{k,1}}{\SKS\setminus\{\aid,\aiu\}}
-{
- \gamma_{k,1}
-}
-{
- \theta_k\{a_1/\fff\}
-}
-\quad,\cdots,\quad
-\vlder{\Phi_{k,n}}{\SKS\setminus\{\aid,\aiu\}}
-{
- \gamma_{k,n}
-}
-{
- \theta_k\{a_n/\fff\}
-}\quad.
-\]
-Then we can construct, for every $1\le i\le n$:
-\[
-\Phi'_{k+1,i}\quad=\quad
-\vlderivation
-{
- \vlde{}{\{\awu\}}
- {
-  \vls[a_i.\gamma_{k+1,i}]
- }
- {
-  \vlde{\Gamma_k}{\SKS\setminus\{\aid,\aiu\}}
-  {
-   \vls([a_1.\gamma_{k+1,1}].\cdots.[a_n.\gamma_{k+1,n}])
-  }
-  {
-   \vlde{}{\SKS\setminus\{\aid,\aiu\}}
-   {
-    \vls
-    [
-     (
-      a_1
-     .
-      \vlder{\Phi_{k,1}}{\SKS\setminus\{\aid,\aiu\}}
-      {
-       \gamma_{k,1}
-      }
-      {
-       \theta_k\{a_1/\fff\}
-      }
-     )
-    .\cdots.
-     (
-      a_n
-     .
-      \vlder{\Phi_{k,n}}{\SKS\setminus\{\aid,\aiu\}}
-      {
-       \gamma_{k,n}
-      }
-      {
-       \theta_n\{a_1/\fff\}
-      }
-     )
-    ]
-   }
-   {
-    \vlde{}{\{\awd\}}
-    {
-     \theta_{k+1}
-    }
-    {
-     \vlhy{\theta_{k+1}\{a_i/\fff\}}
-    }
-   }
-  }
- }
-}\quad.
-\]
-Since $\Phi'_{k+1,i}$ does not contain any $\aid$ instances and the premiss of $\Phi'_{k+1,i}$ does not contain any occurrences of $a_i$, we can apply weakening reductions to obtain:
-\[
-\vlder{\Phi_{k+1,i}}{\SKS\setminus\{\aid,\aiu\}}
-{
- \vlsbr[\vlinf{}{}{a_i}{\fff}.\gamma_{k+1,i}]
-}
-{
- \theta_{k+1}\{a_i/\fff\}
-}\quad,
-\]
-where $\Phi_{k+1,i}$ is the required derivation.
-
-%---
-We prove by induction on $k$ how to build $\Psi_{k,i}$. The base case is trivial:
-\[
- \vlinf{=}{}
- {
-  \theta_{n+1}\{a_i/\ttt\}
- }
- {
-  \gamma_{l,i}
- }
-\]
-We prove the inductive case by fixing a $k<l$. We need the following derivation:
-\[
-\vlder{}{\SKS\setminus\{\aid,\aiu\}}
-{
-\vls[(a_1.\theta_{n-l+k}\{a_1/\fff\}).\cdots.(a_n.\theta_{n-l+k}\{a_n/\fff\})]
-}
-{
- \theta_{n-l+k+1}
-}\quad,
-\]
-We know such a derivation exists in system $\SKS$ since the premiss and conclusion are logically equivalent. Furthermore, since the premiss and conclusion do not contain any pair of dual atom occurrences we know that a derivation exists in the system $\SKS\setminus\{\aid,\aiu\}$, by Proposition~\vref{TODO}. We assume the following derivations exist
-
-\[
-\vlder{\Psi_{k,1}}{\SKS\setminus\{\aid,\aiu\}}
-{
- \theta_{n-l+k+1}\{a_1/\ttt\}
-}
-{
- \gamma_{k,1}
-}
-\quad,\cdots,\quad
-\vlder{\Psi_{k,n}}{\SKS\setminus\{\aid,\aiu\}}
-{
- \theta_{n-l+k+1}\{a_n/\ttt\}
-}
-{
- \gamma_{k,n}
-}\quad.
-\]
-Then we can construct, for every $1\le i\le n$:
-\[
-\Psi'_{k-1,i}\quad=\quad
-\vlderivation
-{
- \vlde{}{\{\awu\}}
- {
-  \theta_{n-l+k}\{a_i/\ttt\}
- }
- {
-  \vlde{}{}
-  {
-   \theta_{n-l+k}
-  }
-  {
-   \vlde{\Gamma_k}{\SKS\setminus\{\aid,\aiu\}}
-   {
-    \vls
-    (
-     [
-      a_1
-     .
-      \vlder{\Psi_{k,1}}{\SKS\setminus\{\aid,\aiu\}}
-      {
-       \theta_{n-l+k+1}\{a_1/\ttt\}
-      }
-      {
-       \gamma_{k,1}
-      }
-     ]
-    .\cdots.
-     [
-      a_n
-     .
-      \vlder{\Psi_{k,n}}{\SKS\setminus\{\aid,\aiu\}}
-      {
-       \theta_{n-l+k+1}\{a_n/\ttt\}
-      }
-      {
-       \gamma_{k,n}
-      }
-     ]
-    )
-   }
-   {
-    \vlde{}{\{\awd\}}
-    {
-     \vls[(a_1.\gamma_{k-1,1}).\cdots.(a_n.\gamma_{k-1,n})]
-    }
-    {
-     \vlhy{\vls(a_i.\gamma_{k-1,i})}
-    }
-   }
-  }
- }
-}\quad.
-\]
-Since $\Psi'_{k-1,i}$ does not contain any $\aiu$ instances and the conclusion of $\Psi'_{k-1,i}$ does not contain any occurrences of $a_i$, we can apply weakening reductions to obtain:
-\[
-\vlder{\Psi_{k-1,i}}{\SKS\setminus\{\aid,\aiu\}}
-{
- \theta_{n-l+k}\{a_i/\ttt\}
-}
-{
- \vlsbr(\vlinf{}{}{\ttt}{a_i}.\gamma_{k-1,i})
-}\quad,
-\]
-where $\Psi_{k-1,i}$ is the required derivation.
-\end{proof}
-
-\TODO{Fix the ambiguous subscripts in the following remark.}
-
-%------------------------------------------------
-\begin{remark}
-In the above theorem $l\ge n$ and if $l=n$, then
-\[
-\theta_{k,i}\{a_i/\fff\}\leftrightarrow\gamma_{k,i}\leftrightarrow\theta_{k+1,i}\{a_i/\ttt\}
-\quad.
-\]
-\end{remark}
