--- a/global_transformations/multiple_isolated_subflow.tex
+++ b/global_transformations/multiple_isolated_subflow.tex
@@ -3,7 +3,7 @@
 \newcommand{\frmis}{{\mathsf{mis}}}
 %---------------------------------------
 \begin{definition}\label{definition:MultipleIsolatedSubflowsRemoval}
-Given $n>0$ distinct atoms $a_1$, $\dots$, $a_n$, an $N>0$, for $0\le k\le N$, a derivation $\Gamma_k$, and, for $0\le k\le N$, formulae $\gamma_{k,1}$, $\dots$, $\gamma_{k,n}$, such that
+Given $n>0$ distinct atoms $a_1$, $\dots$, $a_n$, an $N>0$, for $0\le k\le N$, a derivation $\Gammasf_k$, and, for $0\le k\le N$, formulae $\gamma_{k,1}$, $\dots$, $\gamma_{k,n}$, such that
 \begin{itemize}
  \item $\gamma_{0,1}=\cdots=\gamma_{0,n}=\ttt$;
  \item $\gamma_{N,1}=\cdots=\gamma_{N,n}=\fff$; and
@@ -324,7 +324,7 @@ We combine $\Phi_0$, $\dots$, $\Phi_N$, $\Gammasf_1$, $\dots$, $\Gammasf_N$ to g
 \]
 \end{proof}
 
-\subsubsection{Threshold Formulae}\label{subsection:ThresholdFormulae}
+\subsubsection{Threshold Formulae}\label{subsubsection:ThresholdFormulae}
 
 \TODO{Change this introduction}
 
