--- a/global_transformations/path_breaker.tex
+++ b/global_transformations/path_breaker.tex
@@ -246,3 +246,240 @@ Given atomic flows $\phi$ and $\psi$, such that $\phi\to_\frpb\psi$, then, refer
 	\item By Proposition~\vref{TODO}, we know that for every path from $\epsilon$ to $\iota$ in $\phi'$ there are three paths from $\epsilon$ to $\iota$ in $\psi'$, and if there is a path from $\epsilon$ to $\iota$ in $\psi'$, it must pass through one of the three subflows isomorphic to $\phi$ (resp., $\psi$) so there is a path from $\epsilon$ to $\iota$ in $\phi$.
 \end{itemize}
 \end{proof}
+
+\newcommand{\PB}{\mathsf{PM}}
+\begin{definition}\label{definition:DerPathBreaker}
+The \emph{Path Breaker}, $\PB$, is an operator whose arguments are an atom $a$, and a derivation of shape
+\[
+\Phi\;=\;
+\vlder{\Phi'}{}
+{
+ \vlsbr
+ [
+  \beta
+ \;.\;
+  \vlinf{}{}
+  {
+   \fff
+  }
+  {
+   \vls(a^\psi.\bar a)
+  }
+ \;.\;\cdots\;.\;
+  \vlinf{}{}
+  {
+   \fff
+  }
+  {
+   \vls(a^\psi.\bar a)
+  }
+ ]
+}
+{
+ \vlsbr
+ (
+  \vlinf{}{}
+  {
+   \vls[a^\psi.\bar a]
+  }
+  {
+   \ttt
+  }
+ \;.\;\cdots\;.\;
+  \vlinf{}{}
+  {
+   \vls[a^\psi.\bar a]
+  }
+  {
+   \ttt
+  }
+ \;.\;
+  \alpha
+ )
+}\quad,
+\]
+with atomic flow
+\[
+\atomicflow
+{
+(-8, 7)*{\afvjdm{6}{\boldsymbol\epsilon}{}};
+( 0, 8)*{\afaidm{}{}{}{}{}{}};
+( 8, 7)*{\afvjdm{6}{}{\boldsymbol{\epsilon'}}};
+(-5, 0)*{\affr{8}{8}};
+(-4, 2)*{\aflabelright\phi};
+%---
+( 5, 0)*{\affr{8}{8}};
+( 6, 2)*{\aflabelright{\psi}};
+( 8,-7)*{\afvjum{6}{}{\boldsymbol{\iota'}}};
+( 0,-8)*{\afaium{}{}{}{}{}{}};
+(-8,-7)*{\afvjum{6}{\boldsymbol\iota}{}};
+}
+\quad,
+\]
+such that $a$ does not appear in an interaction or cut instance in $\Phi'$. Consider the derivation
+\[
+\Psi'\;=\;
+\vlder{\Phi'}{}
+{
+ \vlsbr
+ [
+  \beta
+ \;\;\;.\;\;\;
+  \vlderivation
+  {
+   \vlin{}{}
+   {
+    \fff
+   }
+   {
+    \vlde{}{\{\cod\}}
+    {
+     \vls(a.\bar a)
+    }
+    {
+     \vlhy
+     {
+      \vls[(a.\bar a).\cdots.(a.\bar a)]
+     }
+    }
+   }
+  }
+ ]
+}
+{
+ \vlsbr
+ (
+  \vlderivation
+  {
+   \vlde{}{\{\cou\}}
+   {
+    \vls([a.\bar a].\cdots.[a.\bar a])
+   }
+   {
+    \vlin{}{}
+    {
+     \vls[a.\bar a]
+    }
+    {
+     \vlhy
+     {
+      \ttt
+     }
+    }
+   }
+  }
+ \;\;\;.\;\;\;
+  \alpha
+ )
+}\quad,
+\]
+with atomic flow
+\[
+\psi'\;=\;
+\atomicflow{
+(-8, 11)*{\afvjdm{14}{\boldsymbol\epsilon}{}};
+(11, 11)*{\afvjdm{14}{}{\boldsymbol{\epsilon'}}};
+( 2, 18)*{\afaidex{}{}{}{}{}{}{8}{4}};
+%-
+(-2, 10)*{\affr68};
+(-2, 10)*{\copy\contrup};
+(-2,  5)*{\afvjm2};
+(-5,  0)*{\affr{8}{8}};
+(-1,  2)*{\aflabelleft{\phi}};
+(-2, -5)*{\afvjm2};
+(-2,-10)*{\affr68};
+(-2,-10)*{\copy\contrdown};
+%-
+( 6, 10)*{\affr68};
+( 6, 10)*{\copy\contrup};
+( 6,  5)*{\afvjm2};
+( 8,  0)*{\affr{8}{8}};
+(12,  2)*{\aflabelleft{\psi}};
+( 6, -5)*{\afvjm2};
+( 6,-10)*{\affr68};
+( 6,-10)*{\copy\contrdown};
+%-
+( 2,-18)*{\afaiuex{}{}{}{}{}{}{8}{4}};
+(-8,-11)*{\afvjum{14}{\boldsymbol\iota}{}};
+(11,-11)*{\afvjum{14}{}{\boldsymbol{\iota'}}};
+}\quad.
+\]
+We then define $\PB(\Phi,a)$ to be such that $\Psi'\to_\frpb\PB(\Phi,a)$.
+\end{definition}
+
+\begin{proposition}
+Given an atom $a$, and a derivation
+\[
+\Phi\;=\;
+\vlder{}{}
+{
+ \vlsbr
+ [
+  \beta
+ \;.\;
+  \vlinf{}{}
+  {
+   \fff
+  }
+  {
+   \vls(a^\psi.\bar a)
+  }
+ \;.\;\cdots\;.\;
+  \vlinf{}{}
+  {
+   \fff
+  }
+  {
+   \vls(a^\psi.\bar a)
+  }
+ ]
+}
+{
+ \vlsbr
+ (
+  \vlinf{}{}
+  {
+   \vls[a^\psi.\bar a]
+  }
+  {
+   \ttt
+  }
+ \;.\;\cdots\;.\;
+  \vlinf{}{}
+  {
+   \vls[a^\psi.\bar a]
+  }
+  {
+   \ttt
+  }
+ \;.\;
+  \alpha
+ )
+}\quad,
+\]
+with atomic flow
+\[
+\atomicflow
+{
+(-8, 7)*{\afvjdm{6}{\boldsymbol\epsilon}{}};
+( 0, 8)*{\afaidm{}{}{}{}{}{}};
+( 8, 7)*{\afvjdm{6}{}{\boldsymbol{\epsilon'}}};
+(-5, 0)*{\affr{8}{8}};
+(-4, 2)*{\aflabelright\phi};
+%---
+( 5, 0)*{\affr{8}{8}};
+( 6, 2)*{\aflabelright{\psi}};
+( 8,-7)*{\afvjum{6}{}{\boldsymbol{\iota'}}};
+( 0,-8)*{\afaium{}{}{}{}{}{}};
+(-8,-7)*{\afvjum{6}{\boldsymbol\iota}{}};
+}
+\quad,
+\]
+such that $a$ does not appear in an interaction or cut instance in $\Phi'$.
+\begin{itemize}
+\item $\PB(\Phi,a)$ is weakly streamlined with respect to $a$ and with respect to $\bar a$;
+\item for any atom $b$, if $\Phi$ is weakly streamlined with respect to $b$, then $\PB(\Phi,a)$ is weakly streamlined with respect to $b$;
+\item if $\Phi$ is on simple form with respect to $\pi$ then $\PB(\Phi,a)$ is on simple form with respect to $\pi$; and
+\item $\PB(\Phi,a)$ depends at most linearly on the size of $\Phi$.
+\end{itemize}
+\end{proposition}
