Defined ISR and MISR

--- a/global_transformations/isolated_subflow.tex
+++ b/global_transformations/isolated_subflow.tex
@@ -132,7 +132,7 @@ Given a polarity assignment $\pi$, and two atomic flows $\phi$ and $\psi$ such t
 
 \newcommand{\ISR}{\mathsf{ISR}}
 \begin{definition}
-The \emph{streamliner}, $\ISR$, is an operator whose arguments are an atom $a$, and a derivation of shape
+The \emph{isolated subflow remover}, $\ISR$, is an operator whose arguments are an atom $a$, and a derivation of shape
 \[
 \Phi\;=\;
 \vlder{\Phi'}{}
