--- a/global_transformations/multiple_isolated_subflow.tex
+++ b/global_transformations/multiple_isolated_subflow.tex
@@ -683,8 +683,8 @@ such that all the edges in $\psi_i$ are mapped to from $a_i$.
 \begin{itemize}
 \item $\MISR(\Phi,a_1,\dots,a_n)$ is weakly streamlined with respect to $a$, $\dots$, $a_n$;
 \item for any atom $b$, if $\Phi$ is weakly streamlined with respect to $b$, then $\MISR(\Phi,a_1,\dots,a_n)$ is weakly streamlined with respect to $b$;
-\item if $\Phi$ is on simple form with respect to $\pi$ then $\MISR(\Phi,a_1,\dots,a_n)$ is on simple form with respect to $\pi$; and
-\item $\MISR(\Phi,a_1,\dots,a_n)$ depends at most linearly on the size of $\Phi$ and quadratically on the size of $\Gammasf_k$.
+\item if $\Phi$ is on simple form with respect to $\pi$, then $\MISR(\Phi,a_1,\dots,a_n)$ is on simple form with respect to $\pi$; and
+\item the size of $\MISR(\Phi,a_1,\dots,a_n)$ depends at most linearly on the size of $\Phi$ and quadratically on the size of the largest $\Gammasf_k$.
 \end{itemize}
 \end{proposition}
 
