Finished definition of MISR

--- a/global_transformations/multiple_isolated_subflow.tex
+++ b/global_transformations/multiple_isolated_subflow.tex
@@ -529,9 +529,11 @@ with atomic flow
 \[
 \psi'\;=\;
 \atomicflow{
-(-16, 11)*{\afvjdm{14}{\boldsymbol\epsilon}{}};
+(-16, 12)*{\afvjdm{16}{\boldsymbol\epsilon}{}};
+(  3, 20)*{\afaidex{}{}{}{}{}{}{26}{4}};
 (  2, 18)*{\afaidex{}{}{}{}{}{}{8}{4}};
 %-
+(-10, 15)*{\afvj2};
 (-10, 10)*{\affr68};
 (-10, 10)*{\copy\contrup};
 (-10,  5)*{\afvjm2};
@@ -543,6 +545,7 @@ with atomic flow
 (-10, -5)*{\afvjm2};
 (-10,-10)*{\affr68};
 (-10,-10)*{\copy\contrdown};
+(-10,-15)*{\afvj2};
 ( -2, -5)*{\afvjm2};
 ( -2,-10)*{\affr68};
 ( -2,-10)*{\copy\contrdown};
@@ -550,6 +553,7 @@ with atomic flow
 ( 6, 10)*{\affr68};
 ( 6, 10)*{\copy\contrup};
 ( 6,  5)*{\afvjm2};
+(16, 15)*{\afvj2};
 (16, 10)*{\affr68};
 (16, 10)*{\copy\contrup};
 (16,  5)*{\afvjm2};
@@ -564,12 +568,14 @@ with atomic flow
 (16, -5)*{\afvjm2};
 (16,-10)*{\affr68};
 (16,-10)*{\copy\contrdown};
+(16,-15)*{\afvj2};
 %-
+(-16,-12)*{\afvjum{16}{\boldsymbol\iota}{}};
+(  3,-20)*{\afaiuex{}{}{}{}{}{}{26}{4}};
 (  2,-18)*{\afaiuex{}{}{}{}{}{}{8}{4}};
-(-16,-11)*{\afvjum{14}{\boldsymbol\iota}{}};
 }\quad.
 \]
-We then define $\MISR_n(\Phi,a_1,\dots,a_n)$ to be such that $\Psi'\to_\fris\MISR(\Phi,a_1,\dots,a_n)$.
+We then define $\MISR_n(\Phi,a_1,\dots,a_n)$ to be such that $\Psi'\to_\fris\MISR(\Phi,a_1,\dots,a_n)$, where $\psi_i$ in $\psi'$ is a sublfow of $\psi_i$ in the redex of Definition~\vref{definition:MultipleIsolatedSubflowsRemoval}.
 \end{definition}
 
 \begin{proposition}
