Fixed name of PB

--- a/global_transformations/path_breaker.tex
+++ b/global_transformations/path_breaker.tex
@@ -247,7 +247,7 @@ Given atomic flows $\phi$ and $\psi$, such that $\phi\to_\frpb\psi$, then, refer
 \end{itemize}
 \end{proof}
 
-\newcommand{\PB}{\mathsf{PM}}
+\newcommand{\PB}{\mathsf{PB}}
 \begin{definition}\label{definition:DerPathBreaker}
 The \emph{Path Breaker}, $\PB$, is an operator whose arguments are an atom $a$, and a derivation of shape
 \[
