Commented out cut-elimination

--- a/thesis.tex
+++ b/thesis.tex
@@ -126,7 +126,7 @@
 \input{transformations.tex}
 \part{Normalisation}
 \input{streamlining.tex}
-\input{cut_elimination.tex}
+%\input{cut_elimination.tex}
 \part{Conclusions}
 \input{conclusions.tex}
 %\part{Appendices}
