Added convention to avoid twisted wires

--- a/global_transformations/isolated_subflow.tex
+++ b/global_transformations/isolated_subflow.tex
@@ -28,9 +28,8 @@ We define the reduction $\to_\fris$ (where $\fris$ stands for \emph{isolated sub
 ( 0,-14  )*{\afawu{}{}{}{}};
 ( 6, -4  )*{\afvjm{12}};
 ( 0,-16  )*{\afacdmexsq{f_2(\boldsymbol\iota)}{}{}{f_1(\boldsymbol\iota)}{\boldsymbol\iota}{}{12}{4}};
-}\quad,
+}\quad.
 \]
-where, for every $\epsilon$ in $\boldsymbol\epsilon$ (reps., $\iota$ in $\boldsymbol\iota$) the edges $f_1(\epsilon)$ and $f_2(\epsilon)$ (resp., $f_1(\iota)$ and $f_2(\iota)$) are joined by a cocontraction (resp., contraction) vertex.
 \end{definition}
 
 %---------------------------------------
