--- a/global_transformations/multiple_isolated_subflow.tex
+++ b/global_transformations/multiple_isolated_subflow.tex
@@ -124,9 +124,8 @@ where $l_i$ is the number of atom occurrences in $\gamma_{k,i}$, we define the r
 (-12,-50)*{\affr{16}{8}};
 (-12,-50)*{\copy\contrdown};
 (-12,-56)*{\afvjm4};
-}\quad,
-\]
-such that, for every upper (resp., lower) edge $\epsilon'$ (resp., $\iota'$) of the contractum, there is an $\epsilon$ in $\boldsymbol\epsilon$ (reps., $\iota$ in $\boldsymbol\iota$), such that there are paths from $\epsilon'$ (resp., from $\iota'$) to $f_0(\epsilon)$, $\dots$, $f_{n+1}(\epsilon)$ (resp., to $f_0(\iota)$, $\dots$, $f_{n+1}(\iota)$).
+}\quad.
+\].
 \end{definition}
 
 %------------------------------------------------------
