--- a/global_transformations/isolated_subflow.tex
+++ b/global_transformations/isolated_subflow.tex
@@ -37,20 +37,18 @@ We define the reduction $\to_\fris$ (where $\fris$ stands for \emph{isolated sub
 Reduction\/ $\to_\fris$ is sound.
 \end{theorem}
 
-\TODO{Is it ok to refer to the definition in this way and then use the labels we defined there? (this is the way it was done in the paper).}
-
 %---------------------------------------
 \begin{proof}
-Let $\Phi$ be a derivation with flow $\phi'$, such that $\phi'\to_\fris\psi'$. We show that there exists a derivation $\Psi$ with flow $\psi'$ and with the same premiss and conclusion as $\Phi$. In the following, we refer to the figure in Definition~\vref{definition:IsolatedSubflowRemoval}.
+Let $\Phi$ be a derivation with flow $\phi'$, such that $\phi'\to_\fris\psi'$. We show that there exists a derivation $\Psi$ with flow $\psi'$ and with the same premiss and conclusion as $\Phi$. In the following, we refer to the figure in Definition~\ref{definition:IsolatedSubflowRemoval}.
 
-Since $\psi$ is connected, we assume, using Remark~\vref{remark:AlternativeAiDecomposedForm}, that the following derivation is an $\ai$-decomposed form of $\Phi$:
+Since $\psi$ is connected, we assume, by Remark~\vref{remark:AlternativeAiDecomposedForm}, that the following derivation is an $\ai$-decomposed form of $\Phi$:
 \[
 \vlder{\Phi'}{}
 {
- \vlsbr[\beta\;.\;\vlinf{}{}{\fff}{\vls(a.\bar a^\psi)}]
+ \vlsbr[\beta\;.\;\vlinf{}{}{\fff}{\vls(a^\psi.\bar a)}]
 }
 {
- \vlsbr(\vlinf{}{}{\vls[a.\bar a^\psi]}{\ttt}\;.\;\alpha)
+ \vlsbr(\vlinf{}{}{\vls[a^\psi.\bar a]}{\ttt}\;.\;\alpha)
 }\quad,
 \]
 for some atom $a$ and formulae $\alpha$ and $\beta$.
@@ -60,22 +58,22 @@ We obtain the two derivations $\Phi_\ttt$ and $\Phi_\fff$ from $\Phi'$ as follow
 \Phi_\ttt\;=\;
 \vlder{\Phi'\{a^\psi/\fff, \bar a^\psi/\ttt\}}{}
 {
- \vls[\beta.a]
+ \vls[\beta.\bar a]
 }
 {
- \vls([a.\ttt].\alpha)
+ \vls([\ttt.\bar a].\alpha)
 }
-\quad\mbox{and}\quad
+\qquad\mbox{and}\qquad
 \Phi_\fff\;=\;
 \vlder{\Phi'\{a^\psi/\ttt, \bar a^\psi/\fff\}}{}
 {
- \vls[\beta.(a.\fff)]
+ \vls[\beta.(\fff.\bar a)]
 }
 {
- \vls(a.\alpha)
+ \vls(\bar a.\alpha)
 }\quad.
 \]
-Since $\psi$ is connected, the mapping from occurrences of $a^\psi$ and $\bar a^\psi$ to edges of $\psi$ is surjective. Hence, we know that both derivation $\Phi_\ttt$ and $\Phi_\fff$ have flow $\phi$. We combine $\Phi_\ttt$ and $\Phi_\fff$ to get the desired derivation $\Psi$ with flow $\psi'$ and the same premiss and conclusion as $\Phi$:
+Since $\psi$ is connected, the mapping from all the occurrences $a^\psi$ and $\bar a^\psi$ to edges of $\psi$ is surjective. Hence, we know that both derivation $\Phi_\ttt$ and $\Phi_\fff$ have a flow isomorphic to $\phi$. We combine $\Phi_\ttt$ and $\Phi_\fff$ to get the desired derivation $\Psi$ with flow $\psi'$ and the same premiss and conclusion as $\Phi$:
 \[
 \Psi\;=\;
 \vlderivation
@@ -93,10 +91,10 @@ Since $\psi$ is connected, the mapping from occurrences of $a^\psi$ and $\bar a^
    \;\;\;.\;\;\;
     \vlder{\Phi_\fff}{}
     {
-     \vlsbr[\beta\;.\;(\vlinf{}{}{\ttt}{a}\;.\;\fff)]
+     \vlsbr[\beta\;.\;(\fff\;.\;\vlinf{}{}{\ttt}{\bar a})]
     }
     {
-     \vls(a.\alpha)
+     \vls(\bar a.\alpha)
     }
    ]
   }
@@ -107,10 +105,10 @@ Since $\psi$ is connected, the mapping from occurrences of $a^\psi$ and $\bar a^
     (
      \vlder{\Phi_\ttt}{}
      {
-      \vls[\beta.a]
+      \vls[\beta.\bar a]
      }
      {
-      \vlsbr([\vlinf{}{}{a}{\fff}\;.\;\ttt]\;.\;\alpha)
+      \vlsbr([\ttt\;.\;\vlinf{}{}{\bar a}{\fff}]\;.\;\alpha)
      }
     \;\;\;.\;\;\;
      \alpha
